[package]
name = "einsum-codegen"
version = "0.1.0"
edition = "2021"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "Helper for generating einsum implementation using proc-macro"
documentation = "https://docs.rs/einsum-codegen/"
repository    = "https://github.com/termoshtt/einsum-derive"
keywords      = ["ndarray", "matrix", "einsum"]
license       = "MIT OR Apache-2.0"
readme        = "../README.md"
categories    = ["algorithms", "science"]

[dependencies]
anyhow = "1.0.66"
katexit = "0.1.2"
nom = "7.1.1"

# for codegen
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.102"

[dev-dependencies]
insta = "1.21.1"
maplit = "1.0.2"
ndarray = "0.15.6"
