[package]
name = "einsum-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.102"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
insta = "1.21.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
trybuild = "1.0.71"

[dependencies.einsum-codegen]
path = "../einsum-codegen"

[[bench]]
name = "einsum"
harness = false
